Publish eighth draft.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -31,6 +31,7 @@ John Cowan (based on SRFI 4 by Marc Feeley)
   <li>Draft #5 published: 2018/10/30</li>
   <li>Draft #6 published: 2018/12/6</li>
   <li>Draft #7 published: 2018/12/22</li>
+  <li>Draft #8 published: 2019/1/13</li>
 </ul>
 
 <H1>Abstract</H1>
