--- a/srfi-160.html
+++ b/srfi-160.html
@@ -225,7 +225,7 @@ to set an element to an invalid value.
 
 So as not to multiply the number of procedures described in this SRFI beyond necessity, a
 special notational convention is used.  The description of the procedure
-<code>make-@vector</code> is really shorthand for the descriptions of the thirteen
+<code>make-@vector</code> is really shorthand for the descriptions of the twelve
 procedures <code>make-s8vector</code>, <code>make-u8vector</code>, ...
 <code>make-c128vector</code>, all of which are exactly the same except that
 they construct different homogeneous vector types.  Furthermore, except as
@@ -678,74 +678,26 @@ Homogeneous vectors can appear in quasiquotations but must not contain
 2)</code> is not).  This restriction is to accommodate the many Scheme
 systems that use the <code>read</code> procedure to parse programs.
 
-<H2>Packaging</H2>
-
-<p>This SRFI is packaged as thirteen libraries named <code>(srfi
-160 @)</code>, or <code>(srfi :160 @)</code> in R6RS systems, on the
-assumption that most programs will use only a few homogeneous vector
-types.</p>
-
 <H1>Implementation</H1>
 
-<h2>The SRFI 160 library</h2>
+<p>
+To reduce its complexity, this implementation is provided only for R7RS systems.
+However, making it available on R6RS systems as well as R5RS systems with bytevectors
+is straightforward, requiring only a replacement library file that includes the
+implementation files in the <code>srfi/160/base</code> directory.
+</p>
 
-<p>The sample implementation is (not yet) in the repository of this SRFI.
-It depends on the implementation of the <code>(srfi x4)</code> library
-described in the next section.</p>
-For systems that do not
-a native SRFI 4 implementation, the version in the
-<a href="https://github.com/scheme-requests-for-implementation/srfi-4/tree/master/contrib/cowan">
-<code>contrib/cowan</code> directory</a> of the SRFI 4 repository may be used;
-it depends only on a minimal implementation of bytevectors.</p>
+<h2>The SRFI 160 base library</h2>
 
-<p>After downloading the source, it is necessary to run the <code>atexpander.sh</code>
-shell script in order to generate the individual files for the different types.
-This will take <code>at.sls</code>, for example, and create the files
-<code>u8.sls</code>, <code>s8.sls</code>, ... <code>c128.sls</code>.
-The heavy lifting is done by <code>sed</code>.
-
-<p>The following files are provided:</p>
-
-<ul>
-<li><code>srfi.160.at.scm</code> - Skeleton for Chicken libraries.</li>
-
-<li><code>srfi/%3a160/at.scm</code> - Skeleton for Guile and Ypsilon libraries.
-Can be adapted to any R6RS system.</li>
-
-<li><code>srfi/160/at.sld</code> - Skeleton for Chibi libraries.
-Can be adapted to any R7RS system.</li>
-
-<li><code>srfi/160/at-133-impl.scm</code> - Skeleton for shared implementation of SRFI 133 procedures.</li>
-
-<li><code>srfi/160/at-152-impl.scm</code> - Skeleton for shared implementation of SRFI 152 procedures.</li>
-
-<li><code>srfi/160/at-other-impl.scm</code> - Skeleton for shared implementation of other procedures.</li>
-
-<li><code>atexpander.sh</code> - A trivial shell script using <code>sed</code>
-to expand files into their variants.</li>
-
-<li><code>srfi/160/shared-tests.scm</code> - Shared tests (no dependencies).</li>
-
-<li><code>srfi/160/chicken-tests.scm</code> - Chicken 5 test wrapper.</li>
-
-<li><code>srfi/160/guile-tests.scm</code> - Guile test wrapper.</li>
-
-<li><code>srfi/160/chibi-tests.scm</code> - Chibi test wrapper.</li>
-
-<li><code>srfi/160/ypsilon-tests.scm</code> - Ypsilon test wrapper.</li>
-
-</ul>
-
-<h2>The SRFI x4 library</h2>
-
-<p>The library <code>(srfi x4)</code> is in the repository of this SRFI.
-It supports everything that <code>(srfi 4)</code> supports, plus
-two additional
-homogeneous vector types beyond the scope of SRFI 4, namely
-c64vectors, which support inexact complex numbers as two IEEE 32-bit values,
-and c128vectors, which support inexact complex numbers as two IEEE 64-bit values.
-The same eight procedures are available for these types as for the others.
-In addition, the <code>@?</code> procedure described above is available for all types.
+<p>The library <code>(srfi 160 base)</code> is in the repository of this SRFI.
+It supports the eight procedures of SRFI 4, namely <code>make-@vector</code>,
+<code>@vector</code>, <code>@vector?</code>, <code>@vector-length</code>,
+<code>@vector-ref</code>, <code>@vector-set!</code>, <code>@vector->list</code>,
+and <code>list->@vector</code>.  These are provided
+not only for the ten homogeneous vector types supported by SRFI 4,
+but also the two homogeneous vector types beyond the scope of SRFI 4, namely
+c64vectors and c128vectors.
+In addition, the <code>@?</code> procedure, which is not in SRFI 4, is available for all types.
 </p>
 
 <p>The implementation depends on SRFI 4.
@@ -758,29 +710,49 @@ it depends only on a minimal implementation of bytevectors.</p>
 <p>The following files are provided:</p>
 
 <ul>
-<li><code>srfi.x4.scm</code> - Chicken 5 <code>(srfi x4)</code> library.</li>
+<li><code>srfi/160/base.sld</code> - R7RS <code>(srfi 160 base)</code> library.</li>
 
-<li><code>srfi/x4.scm</code> - Chibi <code>(srfi x4)</code> library.</li>
+<li><code>srfi/160/base/complex.scm</code> - Complex number implementation on top of SRFI 4.</li>
 
-<li><code>srfi/%a3x4.scm</code> - Guile and Ypsilon <code>(srfi :x4)</code> library.</li>
+<li><code>srfi/160/base/valid.scm</code> - Valid value predicates.</li>
 
-<li><code>srfi/x4/complex.scm</code> - Complex number implementation on top of SRFI 4.</li>
+<li><code>srfi/160/base/r6rec.scm</code> - Record-type definitions for R6RS.</li>
 
-<li><code>srfi/x4/bit.scm</code> - Bit vector number implementation on top of SRFI 4.</li>
+<li><code>srfi/160/base/r7rec.scm</code> - Record-type definitions for R7RS.</li>
 
-<li><code>srfi/x4/r6rec.scm</code> - Record-type definitions for R6RS.</li>
+<li><code>srfi/160/base/shared-tests.scm</code> - Shared tests (no dependencies).</li>
 
-<li><code>srfi/x4/r7rec.scm</code> - Record-type definitions for R7RS.</li>
+<li><code>srfi/160/base/chibi-tests.scm</code> - Chibi test script wrapper.</li>
 
-<li><code>srfi/x4/shared-tests.scm</code> - Shared tests (no dependencies).</li>
+</ul>
 
-<li><code>srfi/x4/chicken-tests.scm</code> - Chicken 5 test script wrapper.</li>
+<h2>The SRFI 160 library</h2>
 
-<li><code>srfi/x4/guile-tests.scm</code> - Guile test script wrapper.</li>
+<p>The sample implementation is (not yet) in the repository of this SRFI.
+It depends on the implementation of the <code>(srfi 160 base)</code> library
+described in the previous section.</p>
 
-<li><code>srfi/x4/chibi-tests.scm</code> - Chibi test script wrapper.</li>
+<p>After downloading the source, it is necessary to run the <code>atexpander.sh</code>
+shell script in order to generate the individual files for the different types.
+This will take <code>at.sls</code>, for example, and create the files
+<code>u8.sls</code>, <code>s8.sls</code>, ... <code>c128.sls</code>.
+The heavy lifting is done by <code>sed</code>.
 
-<li><code>srfi/x4/ypsilon-tests.scm</code> - Ypsilon test script wrapper.</li>
+<p>The following files are provided:</p>
+<ul>
+<li><code>atexpander.sh</code> - A trivial shell script using <code>sed</code>
+to expand skeleton files into their variants.</li>
+
+<li><code>srfi/160/at.sld</code> - Skeleton for Chibi libraries.
+Can be adapted to any R7RS system.</li>
+
+<li><code>srfi/160/at-133-impl.scm</code> - Skeleton for shared implementation of SRFI 133 procedures.</li>
+
+<li><code>srfi/160/at-152-impl.scm</code> - Skeleton for shared implementation of SRFI 152 procedures.</li>
+
+<li><code>srfi/160/at-other-impl.scm</code> - Skeleton for shared implementation of other procedures.</li>
+
+<li><code>srfi/160/at-tests.scm</code> - Skeleton for SRFI 133 tests (no dependencies).</li>
 
 </ul>
 
