--- a/srfi-160.html
+++ b/srfi-160.html
@@ -33,6 +33,7 @@ John Cowan (based on SRFI 4 by Marc Feeley)
   <li>Draft #7 published: 2018/12/22</li>
   <li>Draft #8 published: 2019/1/13</li>
   <li>Draft #9 published: 2019/3/11</li>
+  <li>Draft #10 published: 2019/5/21</li>
 </ul>
 
 <H1>Abstract</H1>
